--- a/app/src/main/res/layout/activity_waste_disposal.xml
+++ b/app/src/main/res/layout/activity_waste_disposal.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#dddddd"
     android:orientation="vertical"
-    tools:context=".WellLocationDeterminationActivity">
+    tools:context=".WasteDisposalActivity">
 
 
     <LinearLayout
@@ -16,23 +16,21 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:padding="10dp"
+            android:src="@drawable/back" />
+
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="废弃物处理"
-            android:textColor="@color/white"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/tv_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:gravity="center"
-            android:text="保存"
+            android:text="废物处理"
             android:textColor="@color/white"
             android:textSize="20sp" />
     </LinearLayout>
@@ -48,17 +46,11 @@
         android:paddingRight="16dp"
         android:paddingBottom="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="当前项目:"
-            android:textSize="25sp"
-            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/project_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
             android:layout_weight="1"
             android:text="项目 1"
             android:textSize="20sp"
@@ -82,7 +74,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -92,10 +86,10 @@
 
 
                 <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
+                    android:id="@+id/wellName"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:textSize="15sp" />
@@ -103,13 +97,13 @@
             </LinearLayout>
 
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -118,70 +112,33 @@
                     android:textSize="15sp" />
 
 
-                <ImageView
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_marginLeft="10dp"
-
-                    android:background="@drawable/ic_dashboard_black_24dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    android:orientation="vertical"
-                    android:paddingRight="10dp">
-
-                    <View
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:background="@color/Green" />
-                </LinearLayout>
-
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
+                android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp">
 
-                <TextView
+
+                <GridView
+                    android:id="@+id/grid_treatment_scheme"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="现场照片:"
-                    android:textSize="15sp" />
-
-
-                <ImageView
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_marginLeft="10dp"
-
-                    android:background="@drawable/ic_dashboard_black_24dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    android:orientation="vertical"
-                    android:paddingRight="10dp">
-
-                    <View
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:background="@color/Green" />
-                </LinearLayout>
+                    android:layout_height="match_parent"
+                    android:numColumns="6"
+                    android:scrollbars="none"
+                    tools:listitem="@layout/grid_png_item" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -190,34 +147,68 @@
                     android:textSize="15sp" />
 
 
-                <ImageView
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_marginLeft="10dp"
+            </LinearLayout>
 
-                    android:background="@drawable/ic_dashboard_black_24dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    android:orientation="vertical"
-                    android:paddingRight="10dp">
 
-                    <View
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:background="@color/Green" />
-                </LinearLayout>
+                <GridView
+                    android:id="@+id/grid_person_liable"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:numColumns="6"
+                    android:scrollbars="none"
+                    tools:listitem="@layout/grid_png_item" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="现场照片:"
+                    android:textSize="15sp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp">
+
+
+                <GridView
+                    android:id="@+id/grid_site_photos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:numColumns="6"
+                    android:scrollbars="none"
+                    tools:listitem="@layout/grid_png_item" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -226,34 +217,33 @@
                     android:textSize="15sp" />
 
 
-                <ImageView
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_marginLeft="10dp"
+            </LinearLayout>
 
-                    android:background="@drawable/ic_dashboard_black_24dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    android:orientation="vertical"
-                    android:paddingRight="10dp">
 
-                    <View
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:background="@color/Green" />
-                </LinearLayout>
+                <GridView
+                    android:id="@+id/grid_summary_treatment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:numColumns="6"
+                    android:scrollbars="none"
+                    tools:listitem="@layout/grid_png_item" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -262,36 +252,34 @@
                     android:textSize="15sp" />
 
 
-                <ImageView
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_marginLeft="10dp"
-
-                    android:background="@drawable/ic_dashboard_black_24dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    android:orientation="vertical"
-                    android:paddingRight="10dp">
-
-                    <View
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:background="@color/Green" />
-                </LinearLayout>
-
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp">
 
+
+                <GridView
+                    android:id="@+id/grid_treatment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:numColumns="6"
+                    android:scrollbars="none"
+                    tools:listitem="@layout/grid_png_item" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -301,13 +289,25 @@
 
 
                 <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
+                    android:id="@+id/recorder"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:textSize="15sp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -315,9 +315,10 @@
                     android:text="记录时间:"
                     android:textSize="15sp" />
 
-                <View
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                <EditText
+                    android:id="@+id/ed_time"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
@@ -326,13 +327,13 @@
             </LinearLayout>
 
             <EditText
-                android:id="@+id/add_content"
+                android:id="@+id/remark"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
-                android:background="@android:drawable/edit_text"
+                android:background="@drawable/edit_background"
                 android:enabled="true"
                 android:gravity="top"
                 android:hint="备注"
@@ -341,8 +342,48 @@
                 android:minLines="4"
                 android:padding="5dp"
                 android:scrollbars="vertical" />
+            <TextView
+                android:id="@+id/tv_local_save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/btn_8fbc8f_background"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="本地保存"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/btn_1296db_background"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="上传"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
 
 
+            <TextView
+                android:id="@+id/tv_remove"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/btn_a52a2a_background"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="删除"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
         </LinearLayout>
     </ScrollView>
 
